[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://ChameleonBoss.gd" type="Script" id=2]

[node name="ChameleonBoss" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="SpreadShotTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 2.6
one_shot = false
autostart = true

[node name="ColumnShotTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 3.2
one_shot = false
autostart = true

[node name="ChangeDirectionTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 3.5
one_shot = false
autostart = true

[connection signal="timeout" from="SpreadShotTimer" to="." method="_on_SpreadShotTimer_timeout"]

[connection signal="timeout" from="ColumnShotTimer" to="." method="_on_ColumnShotTimer_timeout"]

[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_ChangeDirectionTimer_timeout"]


